# books

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_image.yml  docker-image.yml
app/: __init__.py
books/: books_data.csv  config.py  requirements.txt
books/app/: __init__.py  data_importer.py  routes.py
books/app/seeds/: demo.py
books/app/static/: style.css
books/app/templates/: authors.html  base.html  books_table.html  index.html  search_results.html
books/books/: routes.py
books/books/templates/: base.html  book_details.html  index.html  search_results.html
books/data/: models.py  seed.py
books/migrations/versions/: 1a08edbb7c0b_initial_state.py  6f555ce18ea0_initial_state.py  72105e9be5bf_added_dummy_user_table.py  8df64561509d_removed_dummy_table.py  a6a83ef22eb3_initial_state.py
books/templates/books/: author_details.html  search_results.html
data/: books_data.csv  combine_csv.py  csv_importer.py  data.csv  data_import.py  data_models.py  list_of_books_partII.csv  models.py  requirements.txt
deployment/books/: docker-compose.yaml  nginx.conf
deployment/without_nginx/: docker-compose.yaml
flask_part/: README.md  main.py  requirements.txt
flask_part/app/: models.py
flask_part/app/templates/: base.html  books.html
migrations/versions/: 8d88b0131c75_initial_state.py
src/books/: Dockerfile  boot.sh  extensions.py  main.py  requirements.txt
src/books/api/: routes.py
src/books/apis/: __init__.py  namespace_1.py  namespace_address.py  namespace_author.py  (+3 more)
tests/: __init__.py  test.py
(+25 files in other folders)
