[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["Simon Antonius Lauer <simon.lauer@posteo.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
python-dotenv = "^1.0.1"
faker = "^23.3.0"
flask-migrate = "^4.0.5"
flask-login = "^0.6.3"
flask-restx = "^1.3.0"
flask-wtf = "^1.2.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
